[gd_scene load_steps=2 format=3 uid="uid://bjtxjb58s28cu"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_5wmc7"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5wmc7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -148.0
offset_right = 129.0
offset_bottom = -47.0
grow_vertical = 0

[node name="btn_start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START"

[node name="btn_objective" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="btn_quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_objective" to="." method="_on_btn_objective_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_quit" to="." method="_on_btn_quit_pressed"]
